ReportQueryAPI/k8s/report-q-service.yml
apiVersion: v1
kind: Service
metadata:
  name: report-query-api-service
spec:
  selector:
    app: report-query-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
